removing unecessary files